Home Screen updated 1

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   velocity_x: ^4.1.1
   get: ^4.6.5
+  searchbar_animation: any 
 
 dev_dependencies:
   flutter_test:
